@@ -8,10 +8,12 @@
   [#43011] Bug in struct definition of __reg_UCSR1C and __reg_UCSR0C in iom128rfa1.h
   [#43044] memory sections require __attribute__ ((used))
   [#43828] wdt.h: Wrong inline assembler arguments
-  [#44140] wdt_disable() macro clobbers prescaller bits 
+  [#44140] wdt_disable() macro clobbers prescaller bits
+  [#44279] incorrect USB_TRNCOMPL_vect_num in iox64a1u.h, iox128a1u.h
   [#44515] Wrong build option '-mtiny-stack' instead of '-msp8'
   [#44574] Place device-specific libraries in their multilib directory
   [#44869] trunk doesn't work with gcc 5.1.0-RC-20150412
+  [#44977] Incorrect PORT_t and CRC_t definitions for ATxmega64A1U and 128A1U
   [no-id] TC_EVACT_FRQ_gc was misspelled as TC_EVACT_FRW_gc in some Xmega
           header files
 
